--- a/css/game.css
+++ b/css/game.css
@@ -4,11 +4,11 @@ canvas{
     margin-top: 2em;
 }
 
-.chooseName {
+ol {
     display: none;
     position: absolute;
-    left: 80%;
-    top: 80%;
-    font-family:sans-serif;
-    font-size: 25px;
+    left: 50%;
+    top: 50%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
 }
